--- a/server/tomcat/web/index.html
+++ b/server/tomcat/web/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
     <head>
         <title>TODO supply a title</title>
@@ -6,7 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content</div>
-        <a href="/Test">Go to Test Servlet</a>
+        <p><a href="cpu?service=listAll"> Manage CPU</a>
+        <p><a href="cases?service=listAll"> Manage Case</a>
+        <p><a href="gpus?service=listAll"> Manage GPU</a>
+        <p><a href="motherboards?service=listAll"> Manage Motherboard</a>
+        <p><a href="psus?service=listAll"> Manage PSU</a>
+        <p><a href="rams?service=listAll"> Manage RAM</a>
+        <p><a href="ssds?service=listAll"> Manage SSD</a>
     </body>
 </html>
