--- a/server/tomcat/web/cart/view-cart.html
+++ b/server/tomcat/web/cart/view-cart.html
@@ -158,9 +158,12 @@
 
         <div class="view-cart-container">
           <div class="navbar-container navbar-root-class-name20">
+            <div class="navbar-container1"></div>
             <header class="navbar-container2">
               <header data-thq="thq-navbar" class="navbar-navbar-interactive">
-                <img alt="pastedImage" src="../css/image/logo.png" class="navbar-pasted-image" />
+                <a href="/" class="navbar-link">
+                  <img alt="pastedImage" src="../css/image/logo.png" class="navbar-pasted-image" />
+                </a>
                 <div data-thq="thq-navbar-nav" class="navbar-desktop-menu">
                   <nav class="navbar-links">
                     <div class="navbar-container3">
@@ -182,24 +185,26 @@
                       <span class="navbar-whoweare thq-body-small thq-link">
                         <span>Who we are</span>
                       </span>
-                      <a href="/order">
-                        <span class="navbar-manager-order thq-body-small thq-link">
-                          Manage Order
-                        </span>
+                      <a href="/order" class="navbar-manager-order thq-body-small thq-link">
+                        Manage Order
                       </a>
                     </div>
                   </nav>
                   <div class="navbar-buttons">
-                    <svg viewBox="0 0 1024 1024" class="navbar-icon thq-button-icon thq-icon-medium">
-                      <path
-                        d="M726 768q34 0 59 26t25 60-25 59-59 25-60-25-26-59 26-60 60-26zM42 86h140l40 84h632q18 0 30 13t12 31q0 2-6 20l-152 276q-24 44-74 44h-318l-38 70-2 6q0 10 10 10h494v86h-512q-34 0-59-26t-25-60q0-20 10-40l58-106-154-324h-86v-84zM298 768q34 0 60 26t26 60-26 59-60 25-59-25-25-59 25-60 59-26z">
-                      </path>
-                    </svg><svg viewBox="0 0 1024 1024" class="navbar-icon02 thq-button-icon thq-icon-medium">
+                    <a href="/cart" target="_blank" rel="noreferrer noopener" class="navbar-link1">
+                      <svg viewBox="0 0 1024 1024" class="navbar-icon thq-button-icon thq-icon-medium">
+                        <path
+                          d="M726 768q34 0 59 26t25 60-25 59-59 25-60-25-26-59 26-60 60-26zM42 86h140l40 84h632q18 0 30 13t12 31q0 2-6 20l-152 276q-24 44-74 44h-318l-38 70-2 6q0 10 10 10h494v86h-512q-34 0-59-26t-25-60q0-20 10-40l58-106-154-324h-86v-84zM298 768q34 0 60 26t26 60-26 59-60 25-59-25-25-59 25-60 59-26z">
+                        </path>
+                      </svg>
+                    </a>
+                    <svg viewBox="0 0 1024 1024" class="navbar-icon02 thq-button-icon thq-icon-medium">
                       <path
                         d="M768 682l86 86v42h-684v-42l86-86v-212q0-100 51-174t141-96v-30q0-26 18-45t46-19 46 19 18 45v30q90 22 141 96t51 174v212zM512 938q-36 0-61-24t-25-60h172q0 34-26 59t-60 25z">
                       </path>
                     </svg>
-                    <a href="/profile?action=view" class="navbar-account thq-button-filled">
+                    <a href="/profile?action=view" target="_blank" rel="noreferrer noopener"
+                      class="navbar-account thq-button-filled">
                       <svg viewBox="0 0 731.4285714285713 1024" class="navbar-icon04">
                         <path
                           d="M731.429 799.429c0 83.429-54.857 151.429-121.714 151.429h-488c-66.857 0-121.714-68-121.714-151.429 0-150.286 37.143-324 186.857-324 46.286 45.143 109.143 73.143 178.857 73.143s132.571-28 178.857-73.143c149.714 0 186.857 173.714 186.857 324zM585.143 292.571c0 121.143-98.286 219.429-219.429 219.429s-219.429-98.286-219.429-219.429 98.286-219.429 219.429-219.429 219.429 98.286 219.429 219.429z">
@@ -265,19 +270,15 @@
                 <span class="menu-function-mgt-ware-house text1 thq-link1 thq-body-small">
                   <span>Manage WareHouse</span>
                 </span>
-                <a href="/manage/profile/user">
-                  <span class="menu-function-mgt-customer text1 thq-link1 thq-body-small">
-                    Manage Customer
-                  </span>
+                <a href="/manage/profile/user" class="menu-function-mgt-customer text1 thq-link1 thq-body-small">
+                  Manage Customer
                 </a>
                 <span class="menu-function-mgt-feebcack text1 thq-link1 thq-body-small">
                   <span>Feedback</span>
                   <br />
                 </span>
-                <a href="/manage/profile/staff">
-                  <span class="menu-function-mgt-staff text1 thq-link1 thq-body-small">
-                    Manage Staff
-                  </span>
+                <a href="/manage/profile/staff" class="menu-function-mgt-staff text1 thq-link1 thq-body-small">
+                  Manage Staff
                 </a>
                 <span class="menu-function-mgt-report text1 thq-link1 thq-body-small">
                   Financial Reports
@@ -310,12 +311,12 @@
                       <span class="view-cart-component-text06">Total</span>
                     </div>
                     <c:forEach var="ProductCount" items="${ProductCount}">
-                      <form action="Cart" method="post">
-                        <input type="hidden" name="productID" value="${ProductCount.id}" />
-                        <div class="view-cart-component-product2">
-                          <div class="view-cart-component-container08">
+                      <div class="view-cart-component-product1">
+                        <form action="Cart" method="post">
+                          <input type="hidden" name="productID" value="${ProductCount.id}" />
+                          <div class="view-cart-component-container05">
                             <img alt="image" src="https://play.teleporthq.io/static/svg/default-img.svg"
-                              class="view-cart-component-image1" />
+                              class="view-cart-component-image" />
                             <div class="view-cart-component-container06">
                               <span class="view-cart-component-name-product1">
                                 &lt;ProductName&gt;
@@ -325,55 +326,55 @@
                               </span>
                             </div>
                           </div>
-                          <span class="view-cart-component-selling-price2">
+                          <span class="view-cart-component-selling-price1">
                             <span>${ProductCount.pricePer} VND</span>
                           </span>
-                          <div class="view-cart-component-container09">
+                          <div class="view-cart-component-container07">
                             <button type="submit" name="action" value="removeOne"
-                              class="view-cart-component-button3 button">
+                              class="view-cart-component-button button">
                               <span>
                                 <span>-</span>
                                 <br />
                               </span>
                             </button>
-                            <span class="view-cart-component-text18">
+                            <span class="view-cart-component-text10">
                               <span>${ProductCount.count}</span>
                               <br />
                             </span>
-                            <button type="submit" name="action" value="addOne"
-                              class="view-cart-component-button4 button">
+                            <button button type="submit" name="action" value="addOne"
+                              class="view-cart-component-button1 button">
                               <span>+</span>
                             </button>
                           </div>
-                          <div class="view-cart-component-container10">
-                            <span class="view-cart-component-text22">${ProductCount.totalPrice} VND</span>
-                            <button type="submit" name="action" value="removeAll"
-                              class="view-cart-component-button5 thq-button-filled button">
+                          <div class="view-cart-component-container08">
+                            <span class="view-cart-component-text14">${ProductCount.totalPrice} VND</span>
+                            <button button type="submit" name="action" value="removeAll"
+                              class="view-cart-component-button2 thq-button-filled button">
                               X
                             </button>
                           </div>
-                        </div>
-                      </form>
+                        </form>
+                      </div>
                     </c:forEach>
                   </div>
-                  <div class="view-cart-component-container11">
-                    <div class="view-cart-component-container12">
-                      <div class="view-cart-component-container13"></div>
+                  <div class="view-cart-component-container09">
+                    <div class="view-cart-component-container10">
+                      <div class="view-cart-component-container11"></div>
                       <form action="Cart" method="post">
                         <button type="submit" name="action" value="clear"
-                          class="view-cart-component-button6 button thq-button-outline">
+                          class="view-cart-component-button3 button thq-button-outline">
                           <span>Clear Cart</span>
                         </button>
                       </form>
                     </div>
-                    <div class="view-cart-component-container14">
-                      <div class="view-cart-component-container15">
-                        <br>
-                        <span class="view-cart-component-text23">
+                    <div class="view-cart-component-container12">
+                      <div class="view-cart-component-container13">
+                        <span class="view-cart-component-text15">
                           <span>Total:&nbsp;</span>
+                          <br />
                         </span>
-                        <span>
-                          <span class="view-cart-component-text26">${cartPrice} VND</span>
+                        <span class="view-cart-component-text18">
+                          <span>${cartPrice} VND</span>
                         </span>
                       </div>
                       <form action="/payment/vnpayajax" id="frmCreateOrder" method="post">
@@ -488,9 +489,10 @@
                                 d="M854 342v-86l-342 214-342-214v86l342 212zM854 170q34 0 59 26t25 60v512q0 34-25 60t-59 26h-684q-34 0-59-26t-25-60v-512q0-34 25-60t59-26h684z">
                               </path>
                             </svg>
-                            <span class="thq-body-small">
-                              Email :&nbsp;support@themajorones.dev
-                            </span>
+                            <a href="mailto:support@themajorones.dev?subject=Support"
+                              class="footer-social-link5 thq-body-small">
+                              Email : support@themajorones.dev
+                            </a>
                           </div>
                           <div class="footer-link3">
                             <svg viewBox="0 0 1024 1024" class="footer-icon6">
