--- a/server/tomcat/web/report/report.html
+++ b/server/tomcat/web/report/report.html
@@ -85,7 +85,7 @@
               <a href="index.html" class="navmain-link">
                 <img
                   alt="pastedImage"
-                  src="public/external/pastedimage-eh8r-200h.png"
+                  src="../css/image/logo.png"
                   class="navmain-pasted-image"
                 />
               </a>
@@ -171,7 +171,7 @@
                     <div class="navmain-container5">
                       <img
                         alt="pastedImage"
-                        src="public/external/pastedimage-bdsl-200h.png"
+                        src="../css/image/logo.png"
                         class="navmain-pasted-image1"
                       />
                     </div>
